# obsidian-lifeos-bar-tomato

./: .gitignore  CONTRIBUTING.md  FIXES.md  GITHUB_SETUP.md  LICENSE  README.md  index.html  nohup.out  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  app_state.rs  autostart.rs  commands.rs  lib.rs  main.rs
src-tauri/src/platform/: device_id.rs  mod.rs  notification.rs
src-tauri/src/timer/: state.rs
src-tauri/src/vault/: config.rs  daily_note.rs  mod.rs  pomodoro_records.rs  projects.rs  tasks.rs
src/components/: DailySummary.svelte  Settings.svelte  TaskSelector.svelte  Timer.svelte
src/lib/: types.ts
src/lib/api/: tauri.ts
src/lib/stores/: index.ts
src/lib/utils/: format.ts
src/styles/: global.css
