[package]
name = "bar-tomato"
version = "0.1.0"
description = "A standalone Pomodoro timer that syncs with Obsidian LifeOS Plugin"
authors = ["mariozzj"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bar_tomato_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.4"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.2"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["rt", "time", "sync", "macros"] }
fs2 = "0.4.3"
notify = "8.2.0"
machine-uid = "0.5.4"
glob = "0.3.3"
walkdir = "2.5.0"
hostname = "0.4.2"
whoami = "2.1.0"
dirs = "6.0.0"
window-vibrancy = "0.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

